welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {

		(speed, isBirthday) match {
  case (speed, isBirthday) if (speed <65, isBirthday==true) => return 0
  case (speed, isBirthday) if (speed<=85 && speed>65 , isBirthday==true) => return 1
  case (speed, isBirthday) if (speed>86, isBirthday==true) => return 2
  
  case (speed, isBirthday) if (speed<60 , isBirthday==false) => return 0
  case (speed, isBirthday) if (speed<=80 && speed>60, isBirthday==false)  => return 1
  case (speed, isBirthday) if (speed>81 isBirthday==false) => return 2
	}


	
}